--- a/scss/components/_slider.scss
+++ b/scss/components/_slider.scss
@@ -8,6 +8,8 @@
   height: 100%;
   opacity: 0;
   visibility: hidden;
+  -webkit-overflow-scrolling: touch;
+
   background: $backgroundColorGreyPage;
   z-index: 1;
 
@@ -43,7 +45,10 @@
   .slider__content {
     height: 100%;
     display: flex;
-    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    touch-action: auto;
+    overflow: hidden !important;
+    overflow-x: auto !important;
     scroll-snap-type: x mandatory;
     // Hide scrollbar
     -ms-overflow-style: none;
@@ -78,6 +83,10 @@
     width: 100%;
     height: 100%;
 
+    -webkit-overflow-scrolling: touch;
+    overflow: hidden;
+    overflow-x: auto !important;
+
     display: none;
     background: $backgroundColorGreyPage;
 
@@ -86,7 +95,6 @@
     }
 
     .slider__selected-counter {
-      // background-color: red;
       color: $colorBlueText;
       position: fixed;
       top: calc(35vh - 20px - 24px);
@@ -115,13 +123,13 @@
       align-items: center;
       gap: 24px;
 
-      overflow-x: scroll;
-      // Hide scrollbar
-      -ms-overflow-style: none;
-      scrollbar-width: none;
-      &::-webkit-scrollbar {
-        display: none;
-      }
+      // // Hide scrollbar
+      // -ms-overflow-style: none;
+      // scrollbar-width: none;
+
+      // &::-webkit-scrollbar {
+      //   display: none;
+      // }
 
       .slider__img-container {
         position: relative;
